force-app/main/default/objects/Indicator_Item_Extension__mdt/Indicator_Item_Extension__mdt.object-meta.xml
<CustomObject>
    <description>Advanced values to extend an Indicator Item.</description>
    <label>Indicator Item Extension</label>
    <pluralLabel>Indicator Item Extensions</pluralLabel>
</CustomObject>