force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Contains_Text__c.field-meta.xml
<CustomField>
    <fullName>Contains_Text__c</fullName>
    <label>Contains Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>