force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Hover_Text__c.field-meta.xml
<CustomField>
    <fullName>Hover_Text__c</fullName>
    <label>Hover Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>