force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Icon_Value__c.field-meta.xml
<CustomField>
    <fullName>Icon_Value__c</fullName>
    <label>Icon Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>