force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>