force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Indicator_Item__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Item__c</fullName>
    <label>Indicator Item</label>
    <referenceTo>Indicator_Item__mdt</referenceTo>
    <relationshipLabel>Indicator Item Extensions</relationshipLabel>
    <relationshipName>Indicator_Item_Extensions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>