force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Maximum__c.field-meta.xml
<CustomField>
    <fullName>Maximum__c</fullName>
    <label>Maximum ( &lt; )</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>