force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <label>Minimum ( &gt;= )</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>