force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <inlineHelpText>Priority of this rule.  If an field's value first multiple extension rules, the lowest priority will be used.</inlineHelpText>
    <label>Priority</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>