force-app/main/default/objects/Indicator_Item_Extension__mdt/fields/Static_Text__c.field-meta.xml
<CustomField>
    <fullName>Static_Text__c</fullName>
    <label>Static Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>