force-app/main/default/objects/Indicator_Item_Extension__mdt/validationRules/Numeric_Missing_Minimum.validationRule-meta.xml
<ValidationRule>
    <fullName>Numeric_Missing_Minimum</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Minimum__c )
&amp;&amp; (
    CONTAINS(Indicator_Item__r.Field__r.DataType,'Number')
    || CONTAINS(Indicator_Item__r.Field__r.DataType,'Currency')
|| CONTAINS(Indicator_Item__r.Field__r.DataType,'Percent')
)</errorConditionFormula>
    <errorDisplayField>Minimum__c</errorDisplayField>
    <errorMessage>Indicator Item is a Numeric Type and requires a Minimum value.</errorMessage>
</ValidationRule>