force-app/main/default/objects/Indicator_Item_Extension__mdt/validationRules/String_Missing_Contains_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>String_Missing_Contains_Text</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Contains_Text__c )
&amp;&amp; (
    CONTAINS(Indicator_Item__r.Field__r.DataType,'Text')
    || CONTAINS(Indicator_Item__r.Field__r.DataType,'Picklist')
)</errorConditionFormula>
    <errorDisplayField>Contains_Text__c</errorDisplayField>
    <errorMessage>Indicator Item is a String/Picklist Type and requires a Contains Text value</errorMessage>
</ValidationRule>